# peermarket-marketing-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  deploy.yml  slack-channel-check.yml
.superpowers/sdd/: autonomy-task-6-fix4-report.md  final-fixes-report.md  main-merge-report.md  slack-final-fix-report.md  slack-task-2-report.md  slack-task-3-report.md  slack-task-4-report.md  slack-task-5-report.md  (+9 more)
config/: action_types.yaml  brand_voice.md
deploy/: install.sh  peermarket-agent-healthcheck.cron  tunnel-ingress.yaml
docs/: autonomous-ad-lifecycle-runbook.md  multitest-hook-experiment-runbook.md
tests/: conftest.py  test_ack_handler.py  test_ack_parser.py  test_agent_hourly_loop.py  test_agent_main.py  test_attribution_reader.py  test_autonomy_contracts.py  test_autonomy_executor.py  test_autonomy_loop.py  test_autonomy_policy.py  test_autonomy_replacements.py  test_autonomy_snapshot.py  test_autonomy_store.py  test_balance_alert.py  test_brand_quality_gate.py  test_brand_voice.py  test_campaign_urls.py  test_claude.py  test_cli_draft.py  test_cli_meta.py  test_cli_performance.py  test_config.py  test_deploy_workflow.py  test_drafts.py  test_github_app.py  test_healthcheck.py  test_hook_experiments.py  test_json_parse.py  test_learnings.py  test_loops_daily.py  test_loops_revisions.py  test_loops_slack_outbox.py  test_meta_ads.py  test_meta_insights.py  test_meta_pipeline.py  test_migrations.py  test_mixpanel_mcp.py  test_nano_banana.py  test_peermarket_readonly.py  test_performance.py  (+22 more)
(+87 files in other folders)
