[project]
name = "peermarket-agent"
version = "0.1.0"
description = "PeerMarket marketing agent"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.39",
  "slack-bolt>=1.21",
  "slack-sdk>=3.33",
  "aiohttp>=3.10",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "pgvector>=0.3",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "pyjwt[crypto]>=2.10",
  "httpx>=0.28",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "click>=8.1",
  "structlog>=24.4",
  "boto3>=1.35",
  "pyyaml>=6.0",
  "playwright>=1.49",
  "google-genai>=0.4",
  "facebook-business>=21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "respx>=0.21",
]

[project.scripts]
peermarket-agent = "peermarket_agent.agent.main:cli"
peermarket-slack-bridge = "peermarket_agent.slack_bridge.app:cli"
peermarket-migrate = "peermarket_agent.db.migrations:cli"
peermarket-agent-draft = "peermarket_agent.agent.cli_draft:cli"
peermarket-meta = "peermarket_agent.cli_meta:cli"
peermarket-performance = "peermarket_agent.cli_performance:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peermarket_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
